<resources>
    <string name="app_name">Exercise6_點餐App</string>
    <string name="tv_text">點餐系統</string>
    <string name="btn_meal">主餐</string>
    <string name="btn_drink">飲料</string>
    <string name="tv_table">桌號 :</string>
    <string name="ed_tableNo">請輸入桌號</string>
    <string name="tv_text2">~~您的餐點~~</string>
    <string name="tv_meal">主餐 :</string>
    <string name="tv_drink">飲料 :</string>
    <string name="tv_sweet">甜度 :</string>
    <string name="tv_ice">冰塊 :</string>
    <string name="btn_reorder">重新點餐</string>

    <string name="tv_text3">主餐選單</string>
    <string name="tv_tableNo2">無</string>
    <string name="tv_table2">桌號 :</string>
    <string name="che_meal1">A餐</string>
    <string name="che_meal2">B餐</string>
    <string name="che_meal3">C餐</string>
    <string name="che_meal4">D餐</string>
    <string name="btn_mealConfirm">確認送出</string>

    <string name="tv_table3">桌號 :</string>
    <string name="tv_tableNo3">無</string>
    <string name="tv_text4">飲料選單</string>

    <string name="tv_text5">飲料 :</string>
    <string name="latte">拿鐵</string>
    <string name="cappuccino">卡布</string>
    <string name="blacktea">紅茶</string>
    <string name="orange_juice">橙汁</string>

    <string name="tv_text6">甜度 :</string>
    <string name="noSugar">無糖</string>
    <string name="lessSugar">少糖</string>
    <string name="halfSugar">半糖</string>
    <string name="normalSugar">全糖</string>

    <string name="tv_text7">冰塊 :</string>
    <string name="hot">熱飲</string>
    <string name="no_ice">去冰</string>
    <string name="lessIce">少冰</string>
    <string name="normal_ice">正常</string>

    <string name="btn_drinkConfirm">確認送出</string>
</resources>