<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="194dp"
        android:layout_height="44dp"
        android:layout_marginStart="116dp"
        android:layout_marginTop="36dp"
        android:text="@string/tv_text"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_table"
        android:layout_width="63dp"
        android:layout_height="34dp"
        android:layout_marginStart="-20dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_table"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tv_text"
        app:layout_constraintTop_toBottomOf="@id/tv_text" />

    <EditText
        android:id="@+id/ed_tableNo"
        android:layout_width="132dp"
        android:layout_height="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/ed_tableNo"
        android:inputType="textPersonName"
        android:text="@string/ed_tableNo"
        android:textColorHint="#78909c"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_table"
        app:layout_constraintStart_toEndOf="@id/tv_table"
        app:layout_constraintTop_toBottomOf="@id/tv_text"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="57dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_tableNo">

        <Button
            android:id="@+id/btn_meal"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"
            android:text="@string/btn_meal" />

        <Button
            android:id="@+id/btn_drink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/btn_drink" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_reOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_reorder"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="611dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_meal"
            android:layout_width="63dp"
            android:layout_height="34dp"
            android:text="@string/tv_meal"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_drink"
            android:layout_width="63dp"
            android:layout_height="34dp"
            android:text="@string/tv_drink"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_sweet"
            android:layout_width="63dp"
            android:layout_height="34dp"
            android:text="@string/tv_sweet"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_ice"
            android:layout_width="63dp"
            android:layout_height="34dp"
            android:text="@string/tv_ice"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>