<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <TextView
        android:id="@+id/tv_text3"
        android:layout_width="150dp"
        android:layout_height="44dp"
        android:layout_marginTop="50dp"
        android:text="@string/tv_text3"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_mealConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/order_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox4" />

    <TextView
        android:id="@+id/tv_table2"
        android:layout_width="63dp"
        android:layout_height="30dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="48dp"
        android:text="@string/tv_table2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_text3" />

    <TextView
        android:id="@+id/tv_tableNo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/tv_tableNo2"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/tv_table2"
        app:layout_constraintTop_toBottomOf="@id/tv_text3" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:text="@string/che_meal1"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_table2" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:text="@string/che_meal2"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:text="@string/che_meal3"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="15dp"
        android:text="@string/che_meal4"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkBox3" />

</androidx.constraintlayout.widget.ConstraintLayout>